deployment-secret-volumemount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: aws-secret-volume1
          mountPath: /root/.aws/credentials
          subPath: credentials
          readOnly: true
      volumes:
      - name: aws-secret-volume1
        secret:
          secretName: awsfile2-credentials
