initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: app-container
    image: nginx
    ports:
    - containerPort: 8080
