nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-svc-nginx
  name: nginx-pod
spec:
  containers:
  - image: nginx
    name: nginx
