pod-secret-volumemount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: aws-secret-volume
      mountPath: /root/.aws/credentials
      subPath: credentials
      readOnly: true
  volumes:
  - name: aws-secret-volume
    secret:
      secretName: awsfile2-credentials
