private-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-label
  labels:
    app: nginx-label
spec:
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 4
  selector:
    matchLabels:
      app: nginx-label
  template:
    metadata:
      labels:
        app: nginx-label
    spec:
      containers:
      - name: nginx-labelapp
        image: mdsajid020/addressbook-app:v1
      imagePullSecrets:
      - name: docker-pwd
