resource-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      requests:
        cpu: "250m" # Request 250 millicores of CPU
        memory: "256Mi" # Request 256MB of memory
      limits:
        cpu: "500m" # Limit CPU usage to 500 millicores
        memory: "512Mi" # Limit memory usage to 512MB
