ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80 # Service Port
    targetPort: 8080 # Pod Port
  type: ClusterIP
