Hpa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  selector:
    matchLabels:
      run: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: kiran2361993/myportfolio:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 400m
            memory: "400Mi"
          requests:
            cpu: 100m
            memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  type: NodePort # Add this line to specify NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31666 # Optional: specify a custom port or let Kubernetes assign one
  selector:
    run: php-apache
