deploy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-label
  name: nginx-deploy
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deploy
  type: NodePort
