nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
  - port: 80 # Service Port
    targetPort: 8080 # Pod Port
    nodePort: 30007 # Static port on the Node (Default range: 30000-32767)
