service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: svc-nginx
  name: nginx-service
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 80
  selector:
    run: pod-svc-nginx
  type: NodePort
